// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeCutList — golden snapshots (catalog pipeline) > base-1door-12x30x24 1`] = `
[
  {
    "alto": 762,
    "ancho": 600,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 762,
    "ancho": 269,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 582,
    "ancho": 269,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 582,
    "ancho": 269,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 564,
    "ancho": 269,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 759,
    "ancho": 302,
    "cantidad": 1,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Doors",
    "veta": "vertical",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > base-2door-36x30x24 1`] = `
[
  {
    "alto": 762,
    "ancho": 600,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 762,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 582,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 582,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 564,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 759,
    "ancho": 454,
    "cantidad": 2,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Doors",
    "veta": "vertical",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > closet-CAS-18x71.5x12-5 1`] = `
[
  {
    "alto": 1816,
    "ancho": 300,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 1816,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 282,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 282,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 264,
    "ancho": 421,
    "cantidad": 5,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > drawer-base-3drawers-24x30x24 1`] = `
[
  {
    "alto": 762,
    "ancho": 600,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 762,
    "ancho": 574,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 582,
    "ancho": 574,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 582,
    "ancho": 574,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 100,
    "ancho": 574,
    "cantidad": 3,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Front Rails",
    "veta": "horizontal",
  },
  {
    "alto": 564,
    "ancho": 574,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 254,
    "ancho": 607,
    "cantidad": 3,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Drawer Faces",
    "veta": "vertical",
  },
  {
    "alto": 214,
    "ancho": 550,
    "cantidad": 6,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Drawer Box Sides",
    "veta": "horizontal",
  },
  {
    "alto": 214,
    "ancho": 518,
    "cantidad": 6,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 0,
    },
    "material": "cuerpo",
    "nombre": "Drawer Box Ends",
    "veta": "none",
  },
  {
    "alto": 550,
    "ancho": 548,
    "cantidad": 3,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 0,
    },
    "material": "cuerpo",
    "nombre": "Drawer Box Bottom",
    "veta": "none",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > drawer-base-DB3-suffix-18x30x24 1`] = `
[
  {
    "alto": 762,
    "ancho": 600,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 762,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 582,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 582,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 100,
    "ancho": 421,
    "cantidad": 3,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Front Rails",
    "veta": "horizontal",
  },
  {
    "alto": 564,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 254,
    "ancho": 454,
    "cantidad": 3,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Drawer Faces",
    "veta": "vertical",
  },
  {
    "alto": 214,
    "ancho": 550,
    "cantidad": 6,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Drawer Box Sides",
    "veta": "horizontal",
  },
  {
    "alto": 214,
    "ancho": 365,
    "cantidad": 6,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 0,
    },
    "material": "cuerpo",
    "nombre": "Drawer Box Ends",
    "veta": "none",
  },
  {
    "alto": 550,
    "ancho": 395,
    "cantidad": 3,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 0,
    },
    "material": "cuerpo",
    "nombre": "Drawer Box Bottom",
    "veta": "none",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > sink-base-2door-36x30x24 1`] = `
[
  {
    "alto": 762,
    "ancho": 600,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 762,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 582,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 100,
    "ancho": 878,
    "cantidad": 2,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Stretchers",
    "veta": "horizontal",
  },
  {
    "alto": 759,
    "ancho": 454,
    "cantidad": 2,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Doors",
    "veta": "vertical",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > tall-pantry-18x84x24 1`] = `
[
  {
    "alto": 2134,
    "ancho": 600,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 2134,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 582,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 582,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 564,
    "ancho": 421,
    "cantidad": 4,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 2131,
    "ancho": 226,
    "cantidad": 2,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Doors",
    "veta": "vertical",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > wall-1door-18x18x12 1`] = `
[
  {
    "alto": 457,
    "ancho": 300,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 2,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 457,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 282,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 282,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 282,
    "ancho": 421,
    "cantidad": 1,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 454,
    "ancho": 454,
    "cantidad": 1,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Doors",
    "veta": "vertical",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > wall-2door-36x30x12 1`] = `
[
  {
    "alto": 762,
    "ancho": 300,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 2,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 762,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 282,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 282,
    "ancho": 878,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 282,
    "ancho": 878,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 759,
    "ancho": 454,
    "cantidad": 2,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Doors",
    "veta": "vertical",
  },
]
`;

exports[`computeCutList — golden snapshots (catalog pipeline) > wall-24x24x16-depth-bucket 1`] = `
[
  {
    "alto": 610,
    "ancho": 400,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 2,
      "izq": 1,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Side Panels",
    "veta": "vertical",
  },
  {
    "alto": 610,
    "ancho": 574,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 1,
      "izq": 0,
      "sup": 1,
    },
    "material": "back",
    "nombre": "Back Panel",
    "veta": "vertical",
  },
  {
    "alto": 382,
    "ancho": 574,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Top Panel",
    "veta": "horizontal",
  },
  {
    "alto": 382,
    "ancho": 574,
    "cantidad": 1,
    "cubrecanto": {
      "der": 0,
      "inf": 0,
      "izq": 0,
      "sup": 2,
    },
    "material": "cuerpo",
    "nombre": "Bottom Panel",
    "veta": "horizontal",
  },
  {
    "alto": 382,
    "ancho": 574,
    "cantidad": 2,
    "cubrecanto": {
      "der": 1,
      "inf": 1,
      "izq": 1,
      "sup": 1,
    },
    "material": "cuerpo",
    "nombre": "Shelves",
    "veta": "horizontal",
  },
  {
    "alto": 607,
    "ancho": 302,
    "cantidad": 2,
    "cubrecanto": {
      "der": 2,
      "inf": 2,
      "izq": 2,
      "sup": 2,
    },
    "material": "frente",
    "nombre": "Doors",
    "veta": "vertical",
  },
]
`;
